8.3.0 API updates (#97)
Co-authored-by: Ben Musson <58087114+benmusson@users.noreply.github.com>